--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@;300;400;500;600;700&?family=Montserrat:wght@600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="Css/normalize.css" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>Document</title>
   </head>
   <body>
@@ -30,7 +31,7 @@
       </nav>     
     </header>
     <section class="  block block--dark block--skewed-left hero  ">
-      <div class="container grid grid--1x2 ">
+      <div class="container grid grid--1x2 " data-aos="zoom-in">
         <header class=" block__header hero__content">
           <h1 class="block__heading">Cloud Hosting For Pros</h1>
           <p class="hero__tagline">Deploy your websites in less than 60 seconds.</p>
@@ -39,7 +40,8 @@
         <img class="hero__image" src="/icons/banner.png" alt="">
       </div>
     </section>
-    <section class="block container block--domain">
+    <section class="block container block--domain" data-aos="fade-up"
+    data-aos-anchor-placement="bottom-bottom">
       <header class="block__header">
         <h2>starting at $9 per month</h2>
         <p>
@@ -70,7 +72,7 @@
     </section>
     <section class="block container block--container">
       <div class="grid grid--1x3">
-          <div class="plan block__plans">
+          <div class="plan block__plans" data-aos="zoom-in-right" >
             <div class="card card--secondary  ">
               <header class="card__header">
                 <h3 class="plan__name">Entry</h3>
@@ -91,7 +93,7 @@
             </div>
           </div>
           <div>
-            <div class="plan block__plans">
+            <div class="plan block__plans" data-aos="zoom-in-up">
               <div class="card card--primary plan--popular">
                 <header class="card__header">
                   <h3 class="plan__name">Entry</h3>
@@ -112,7 +114,7 @@
               </div>
             </div>
           </div>
-          <div class="plan block__plans">
+          <div class="plan block__plans" data-aos="zoom-in-left">
             <div class="card card--secondary">
               <header class="card__header">
                 <h3 class="plan__name">Entry</h3>
@@ -139,8 +141,8 @@
         <h2>Host on the Cloud to Keep Growing</h2>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, voluptatum!</p>
       </header>
-      <article class="grid grid--1x2 feature">
-        <div class="feature__content">
+      <article class="grid grid--1x2 feature " >
+        <div class="feature__content" data-aos="fade-right">
           <span class="icon-container">
             <svg class="icon icon--primary">
               <use xlink:href="/icons/sprite.svg#easy"></use>
@@ -155,7 +157,7 @@
           </p>
           <a href="#" class="link-arrow">Learn More</a>
         </div>
-        <picture>
+        <picture data-aos="fade-left">
           <source
             type=" image/webp"
             srcset="/icons/easy@1x.webp 1x, /icons/easy@2x.webp 2x"
@@ -256,7 +258,7 @@
       <section class="block block--dark block--skewed-right block-showcase ">
             <h2 class="showcase__heading"> User-Friendly Control Panel </h2>
   <div class="container grid grid--1x2">
-  <picture class="block-showcase__image">
+  <picture class="block-showcase__image" data-aos="fade-right">
     <source
       type=" image/webp"
       srcset="/icons/ipad@1x.webp 1x, /icons/ipad@2x.webp 2x"
@@ -267,7 +269,7 @@
     />
     <img src="/icons/ipad.png" alt="" />
   </picture>
-  <ul class="list">
+  <ul class="list" data-aos="fade-up">
   <li><div class="media">    <div class="media__image">
     <svg class="icon icon--primary">
       <use xlink:href=" /icons/sprite.svg#snap"></use>
@@ -319,7 +321,7 @@
       <h2>What our Customers are Saying</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, tempore!</p>
     </header>
-    <div class="container">
+    <div class="container" data-aos="flip-down">
       <div class="card testimonial">
         <div class="grid grid--1x2">
           <div class="testimonial__image">
@@ -447,6 +449,10 @@
       </section>
     </div>
   </footer>
-  <script src="/js/main.js"></script>
+  <script src="/main.js"></script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
   </body>
 </html>
