--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <nav class="nav collapsible">
         <a class="nav__brand" href="/"><img src="/icons/1logo.svg" alt="" /></a>
         <svg class="icon icon--white nav__toggler">
-          <use xlink:href=" /icons/sprite.svg#menu"></use>
+          <use href=" /icons/sprite.svg#menu"></use>
         </svg>
         <ul class="list nav__list collapsible__content">
           <li class="nav__item"><a href="#">Hosting</a></li>
@@ -57,7 +57,7 @@
         />
         <button class="buttons buttons--accent">
           <svg class="icon icon--white">
-            <use xlink:href=" /icons/sprite.svg#search"></use></svg
+            <use href=" /icons/sprite.svg#search"></use></svg
           >Search
         </button>
       </div>
@@ -145,7 +145,7 @@
         <div class="feature__content" data-aos="fade-right">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="/icons/sprite.svg#easy"></use>
+              <use href="/icons/sprite.svg#easy"></use>
             </svg>
           </span>
           <h3 class="feature__heading">Super Easy to Use</h3>
@@ -173,7 +173,7 @@
         <div class="feature__content">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="/icons/sprite.svg#computer"></use>
+              <use href="/icons/sprite.svg#computer"></use>
             </svg>
           </span>
           <h3 class="feature__heading">Simply fast websites</h3>
@@ -201,7 +201,7 @@
         <div class="feature__content">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="/icons/sprite.svg#clock"></use>
+              <use href="/icons/sprite.svg#clock"></use>
             </svg>
           </span>
           <h3 class="feature__heading">WordPress made easy</h3>
@@ -229,7 +229,7 @@
         <div class="feature__content">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="/icons/sprite.svg#clock"></use>
+              <use href="/icons/sprite.svg#clock"></use>
             </svg>
           </span>
           <h3 class="feature__heading">24/7 Expert Support</h3>
@@ -272,7 +272,7 @@
   <ul class="list" data-aos="fade-up">
   <li><div class="media">    <div class="media__image">
     <svg class="icon icon--primary">
-      <use xlink:href=" /icons/sprite.svg#snap"></use>
+      <use href=" /icons/sprite.svg#snap"></use>
     </svg>
   </div>
   
@@ -287,7 +287,7 @@
   <li><div class="media">
     <div class="media__image">
       <svg class="icon icon--primary">
-        <use xlink:href=" /icons/sprite.svg#growth"></use>
+        <use href=" /icons/sprite.svg#growth"></use>
       </svg>
     </div>
     <div class="media__body">
@@ -301,7 +301,7 @@
   <li><div class="media">
     <div class="media__image">
       <svg class="icon icon--primary">
-        <use xlink:href=" /icons/sprite.svg#wordpress"></use>
+        <use href=" /icons/sprite.svg#wordpress"></use>
       </svg>
     </div>
     <div class="media__body">
@@ -328,7 +328,7 @@
             <img src="/icons/testimonial.jpg" alt="A happy, smiling customer">
             <span class="icon-container icon-container--accent ">
               <svg class="icon icon--white icon--small">
-                <use xlink:href=" /icons/sprite.svg#quotes"></use>
+                <use href=" /icons/sprite.svg#quotes"></use>
               </svg>
             </span>
           </div>
@@ -342,7 +342,7 @@
                 <div class="media">
                   <div class="media__image">
                     <svg class="icon icon--primary">
-                      <use xlink:href=" /icons/sprite.svg#line"></use>
+                      <use href=" /icons/sprite.svg#line"></use>
                     </svg>
                   </div>
                   <div class="media__body">
@@ -376,7 +376,7 @@
         <header class="collapsible__header">
           <h2 class="collapsible__heading footer__heading">products</h2>
           <svg class="icon icon--white collapsible__chevron">
-            <use xlink:href="/icons/sprite.svg#chevron"></use>
+            <use href="/icons/sprite.svg#chevron"></use>
           </svg>
         </header>
         <div class="collapsible__content">
@@ -393,7 +393,7 @@
         <header class="collapsible__header ">
           <h2 class="collapsible__heading footer__heading">company </h2>
           <svg class="icon icon--white collapsible__chevron">
-            <use xlink:href="/icons/sprite.svg#chevron"></use>
+            <use href="/icons/sprite.svg#chevron"></use>
           </svg>
         </header>
         <div class="collapsible__content">
@@ -412,7 +412,7 @@
         <header class="collapsible__header">
           <h2 class="collapsible__heading footer__heading">Support</h2>
           <svg class="icon icon--white collapsible__chevron">
-            <use xlink:href="/icons/sprite.svg#chevron"></use>
+            <use href="/icons/sprite.svg#chevron"></use>
           </svg>
         </header>
         <div class="collapsible__content">
@@ -430,7 +430,7 @@
         <header class="collapsible__header">
           <h2 class="collapsible__heading footer__heading">Domains</h2>
           <svg class="icon icon--white collapsible__chevron">
-            <use xlink:href="/icons/sprite.svg#chevron"></use>
+            <use href="/icons/sprite.svg#chevron"></use>
           </svg>
         </header>
         <div class="collapsible__content">
