--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@;300;400;500;600;700&?family=Montserrat:wght@600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="normalize.css" />
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="/Css/normalize.css" />
+    <link rel="stylesheet" href="/Css/styles.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>Document</title>
   </head>
@@ -449,7 +449,7 @@
       </section>
     </div>
   </footer>
-  <script src="/main.js"></script>
+  <script src="/JS/main.js"></script>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init();
