With meta details

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="Deploy your website in less than a minute for $9">
+    <meta property="og:title" content="Moshify...">
+    <meta property="og:description" content="Deploy your website in less than a minute for $9">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="http://">
+    <meta property="og:url" content="https://moshified.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,7 +19,7 @@
     <link rel="stylesheet" href="/Css/normalize.css" />
     <link rel="stylesheet" href="/Css/styles.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <title>Document</title>
+    <title>Moshify</title>
   </head>
   <body>
     <header>
