--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@;300;400;500;600;700&?family=Montserrat:wght@600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/Css/normalize.css" />
     <link rel="stylesheet" href="/Css/styles.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>Moshify</title>
@@ -24,7 +23,7 @@
   <body>
     <header>
       <nav class="nav collapsible">
-        <a class="nav__brand" href="/"><img src="/icons/1logo.svg" alt="" /></a>
+        <a aria-label="moshify" class="nav__brand" href="/"><img src="/icons/1logo.svg" alt="" /></a>
         <svg class="icon icon--white nav__toggler">
           <use href=" /icons/sprite.svg#menu"></use>
         </svg>
@@ -57,6 +56,7 @@
       </header>
       <div class="input-group">
         <input
+          aria-label="domain"
           type="text"
           class="input"
           placeholder="Enter domain name here..."
